# hycu

./: .gitignore  CMakeLists.txt  README  README.md  SConstruct  TODO.md  block.cc  count.cc  count.hh  curve.cc  curve.hh  main.cc  makefile  mpi.cc  opencl_interface.hh  reduction_table.cc  single.cc
cmake/: FindFLINT.cmake  FindGMP.cmake  FindYAML-cpp.cmake
site_scons/: resource.py
src/: CMakeLists.txt  SConscript  block.cc  block_enumerator.cc  block_enumerator.hh  block_iterator.cc  block_iterator.hh  curve.cc  curve.hh  curve_enumerator.cc  curve_enumerator.hh  curve_fq.cc  curve_fq.hh  curve_iterator.cc  curve_iterator.hh  enumeration_table.cc  enumeration_table.hh  fq_element_table.cc  fq_element_table.hh  isogeny_count_store.cc  isogeny_count_store.hh  isogeny_representative_store.cc  isogeny_representative_store.hh  isogeny_type_store.cc  isogeny_type_store.hh  legacy.cc  merge_isogeny_representatives.cc  mpi.cc  mpi_worker_pool.cc  mpi_worker_pool.hh  opencl_interface.cc  opencl_interface.hh  reduction_table.cc  reduction_table.hh  single.cc  single_curve_fp.cc  single_curve_fp.hh
src/config/: config_node.cc  config_node.hh
src/excutables/: mpi.cc
src/executables/: legacy.cc  merge_isogeny_representatives.cc  merger.cc  merger_mpi.cc  mpi.cc  single.cc  thread.cc  threaded.cc
src/executables/mpi/: master.cc  master.hh  worker.cc  worker.hh
src/mpi/: config_node.cc  config_node.hh  master.cc  master.hh  master.plist  serialization_tuple.hh  store.cc  store.hh  thread.cc  thread.hh  thread_pool.cc  thread_pool.hh  worker.cc  worker_pool.cc  worker_pool.hh
src/opencl/: buffer_evaluation.cc  buffer_evaluation.hh  evaluation.cl  interface.cc  interface.hh  kernel_evaluation.cc  kernel_evaluation.hh  kernel_reduction.cc  kernel_reduction.hh  program.cc  program.hh  program_evaluation.cc  program_evaluation.hh  program_reduction.cc  program_reduction.hh  reduction.cl
src/store/: count_representative.cc  count_representative.hh  curve_data.cc  curve_data.hh  file_store.cc  file_store.hh  global_store.hh  legacy.cc  legacy.hh  representative.cc  representative.hh  store.cc  store.hh  store_data.cc  store_data.hh  store_factory.hh  store_global.cc  store_global.hh  store_interface.hh
src/store/curve_data/: discriminant.cc  discriminant.hh  discriminant_hasse_weil.cc  discriminant_hasse_weil.hh  explicit_ramification_hasse_weil.cc  explicit_ramification_hasse_weil.hh  hasse_weil.cc  hasse_weil.hh
src/store/store_data/: count.hh  isomorphism_class.cc  isomorphism_class.hh
src/threaded/: thread.cc  thread.hh  thread_pool.cc  thread_pool.hh
src/utils/: serialization_tuple.hh
src/worker_pool/: mpi.cc  mpi.hh  mpi_worker.cc  mpi_worker.hh  standalone.cc  standalone.hh
test/: CMakeLists.txt  SConscript  block_iterator.cc  create_reference_store.sage  curve_iterator.cc  iterator_messaging.cc  iterator_messaging.hh  reference_store_dhi_q5_g1.hh  reference_store_dhi_q7_g1.hh  reference_store_hi_q5_g1.hh  reference_store_q5_g1.hh  reference_store_q7_g1.hh  reference_store_q7_g2.hh  small_curves.cc  test.cc  test_store.hh  threaded.cc
